--- a/deps/rust/crates/BUILD.cc-1.2.53.bazel
+++ b/deps/rust/crates/BUILD.cc-1.2.53.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "find_msvc_tools",
+    name = "cc",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,6 +28,9 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "parallel",
+    ],
     crate_root = "src/lib.rs",
     edition = "2018",
     rustc_flags = [
@@ -35,10 +38,29 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=find-msvc-tools",
+        "crate-name=cc",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.1.7",
+    version = "1.2.53",
+    deps = [
+        "@crates_vendor__find-msvc-tools-0.1.8//:find_msvc_tools",
+        "@crates_vendor__jobserver-0.1.34//:jobserver",
+        "@crates_vendor__shlex-1.3.0//:shlex",
+    ] + select({
+        "@rules_rust//rust/platform:aarch64-apple-darwin": [
+            "@crates_vendor__libc-0.2.180//:libc",  # aarch64-apple-darwin
+        ],
+        "@rules_rust//rust/platform:aarch64-unknown-linux-gnu": [
+            "@crates_vendor__libc-0.2.180//:libc",  # aarch64-unknown-linux-gnu
+        ],
+        "@rules_rust//rust/platform:x86_64-apple-darwin": [
+            "@crates_vendor__libc-0.2.180//:libc",  # x86_64-apple-darwin
+        ],
+        "@rules_rust//rust/platform:x86_64-unknown-linux-gnu": [
+            "@crates_vendor__libc-0.2.180//:libc",  # x86_64-unknown-linux-gnu
+        ],
+        "//conditions:default": [],
+    }),
 )
