--- a/deps/rust/crates/BUILD.clap_lex-0.7.7.bazel
+++ b/deps/rust/crates/BUILD.clap_lex-0.7.7.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "flate2",
+    name = "clap_lex",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,27 +28,17 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "any_impl",
-        "default",
-        "miniz_oxide",
-        "rust_backend",
-    ],
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=flate2",
+        "crate-name=clap_lex",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.1.5",
-    deps = [
-        "@crates_vendor__crc32fast-1.5.0//:crc32fast",
-        "@crates_vendor__miniz_oxide-0.8.9//:miniz_oxide",
-    ],
+    version = "0.7.7",
 )
