--- a/deps/rust/crates/BUILD.find-msvc-tools-0.1.8.bazel
+++ b/deps/rust/crates/BUILD.find-msvc-tools-0.1.8.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "wasm_bindgen_macro_support",
+    name = "find_msvc_tools",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,23 +29,16 @@ rust_library(
         ],
     ),
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=wasm-bindgen-macro-support",
+        "crate-name=find-msvc-tools",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.106",
-    deps = [
-        "@crates_vendor__bumpalo-3.19.1//:bumpalo",
-        "@crates_vendor__proc-macro2-1.0.105//:proc_macro2",
-        "@crates_vendor__quote-1.0.43//:quote",
-        "@crates_vendor__syn-2.0.114//:syn",
-        "@crates_vendor__wasm-bindgen-shared-0.2.106//:wasm_bindgen_shared",
-    ],
+    version = "0.1.8",
 )
