--- a/deps/rust/crates/BUILD.flate2-1.1.8.bazel
+++ b/deps/rust/crates/BUILD.flate2-1.1.8.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "hstr",
+    name = "flate2",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,27 +29,26 @@ rust_library(
         ],
     ),
     crate_features = [
-        "serde",
+        "any_impl",
+        "default",
+        "miniz_oxide",
+        "rust_backend",
     ],
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=hstr",
+        "crate-name=flate2",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "3.0.3",
+    version = "1.1.8",
     deps = [
-        "@crates_vendor__hashbrown-0.14.5//:hashbrown",
-        "@crates_vendor__new_debug_unreachable-1.0.6//:debug_unreachable",
-        "@crates_vendor__once_cell-1.21.3//:once_cell",
-        "@crates_vendor__rustc-hash-2.1.1//:rustc_hash",
-        "@crates_vendor__serde-1.0.228//:serde",
-        "@crates_vendor__triomphe-0.1.15//:triomphe",
+        "@crates_vendor__crc32fast-1.5.0//:crc32fast",
+        "@crates_vendor__miniz_oxide-0.8.9//:miniz_oxide",
     ],
 )
