--- a/deps/rust/crates/BUILD.getrandom-0.2.17.bazel
+++ b/deps/rust/crates/BUILD.getrandom-0.2.17.bazel
@@ -6,12 +6,12 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
+load("@rules_rust//rust:defs.bzl", "rust_library")
 
 package(default_visibility = ["//visibility:public"])
 
-rust_proc_macro(
-    name = "wasm_bindgen_macro",
+rust_library(
+    name = "getrandom",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,21 +28,37 @@ rust_proc_macro(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "std",
+    ],
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=wasm-bindgen-macro",
+        "crate-name=getrandom",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.106",
+    version = "0.2.17",
     deps = [
-        "@crates_vendor__quote-1.0.43//:quote",
-        "@crates_vendor__wasm-bindgen-macro-support-0.2.106//:wasm_bindgen_macro_support",
-    ],
+        "@crates_vendor__cfg-if-1.0.4//:cfg_if",
+    ] + select({
+        "@rules_rust//rust/platform:aarch64-apple-darwin": [
+            "@crates_vendor__libc-0.2.180//:libc",  # cfg(unix)
+        ],
+        "@rules_rust//rust/platform:aarch64-unknown-linux-gnu": [
+            "@crates_vendor__libc-0.2.180//:libc",  # cfg(unix)
+        ],
+        "@rules_rust//rust/platform:x86_64-apple-darwin": [
+            "@crates_vendor__libc-0.2.180//:libc",  # cfg(unix)
+        ],
+        "@rules_rust//rust/platform:x86_64-unknown-linux-gnu": [
+            "@crates_vendor__libc-0.2.180//:libc",  # cfg(unix)
+        ],
+        "//conditions:default": [],
+    }),
 )
