--- a/deps/rust/crates/BUILD.hstr-3.0.4.bazel
+++ b/deps/rust/crates/BUILD.hstr-3.0.4.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "getrandom",
+    name = "hstr",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,36 +29,27 @@ rust_library(
         ],
     ),
     crate_features = [
-        "std",
+        "serde",
     ],
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=getrandom",
+        "crate-name=hstr",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.16",
+    version = "3.0.4",
     deps = [
-        "@crates_vendor__cfg-if-1.0.4//:cfg_if",
-    ] + select({
-        "@rules_rust//rust/platform:aarch64-apple-darwin": [
-            "@crates_vendor__libc-0.2.180//:libc",  # cfg(unix)
-        ],
-        "@rules_rust//rust/platform:aarch64-unknown-linux-gnu": [
-            "@crates_vendor__libc-0.2.180//:libc",  # cfg(unix)
-        ],
-        "@rules_rust//rust/platform:x86_64-apple-darwin": [
-            "@crates_vendor__libc-0.2.180//:libc",  # cfg(unix)
-        ],
-        "@rules_rust//rust/platform:x86_64-unknown-linux-gnu": [
-            "@crates_vendor__libc-0.2.180//:libc",  # cfg(unix)
-        ],
-        "//conditions:default": [],
-    }),
+        "@crates_vendor__hashbrown-0.14.5//:hashbrown",
+        "@crates_vendor__new_debug_unreachable-1.0.6//:debug_unreachable",
+        "@crates_vendor__once_cell-1.21.3//:once_cell",
+        "@crates_vendor__rustc-hash-2.1.1//:rustc_hash",
+        "@crates_vendor__serde-1.0.228//:serde",
+        "@crates_vendor__triomphe-0.1.15//:triomphe",
+    ],
 )
