--- a/deps/rust/crates/BUILD.js-sys-0.3.85.bazel
+++ b/deps/rust/crates/BUILD.js-sys-0.3.85.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "wasip2",
+    name = "js_sys",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -35,13 +35,14 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=wasip2",
+        "crate-name=js-sys",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.1+wasi-0.2.4",
+    version = "0.3.85",
     deps = [
-        "@crates_vendor__wit-bindgen-0.46.0//:wit_bindgen",
+        "@crates_vendor__once_cell-1.21.3//:once_cell",
+        "@crates_vendor__wasm-bindgen-0.2.108//:wasm_bindgen",
     ],
 )
