--- a/deps/rust/crates/BUILD.wasm-bindgen-macro-support-0.2.108.bazel
+++ b/deps/rust/crates/BUILD.wasm-bindgen-macro-support-0.2.108.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "js_sys",
+    name = "wasm_bindgen_macro_support",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -35,14 +35,17 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=js-sys",
+        "crate-name=wasm-bindgen-macro-support",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.3.83",
+    version = "0.2.108",
     deps = [
-        "@crates_vendor__once_cell-1.21.3//:once_cell",
-        "@crates_vendor__wasm-bindgen-0.2.106//:wasm_bindgen",
+        "@crates_vendor__bumpalo-3.19.1//:bumpalo",
+        "@crates_vendor__proc-macro2-1.0.105//:proc_macro2",
+        "@crates_vendor__quote-1.0.43//:quote",
+        "@crates_vendor__syn-2.0.114//:syn",
+        "@crates_vendor__wasm-bindgen-shared-0.2.108//:wasm_bindgen_shared",
     ],
 )
