--- a/src/workerd/util/BUILD.bazel
+++ b/src/workerd/util/BUILD.bazel
@@ -386,7 +386,10 @@ kj_test(
 
 kj_test(
     src = "small-set-test.c++",
-    deps = [":small-set"],
+    deps = [
+        ":small-set",
+        ":util",
+    ],
 )
 
 wd_cc_library(
