--- a/.github/workflows/_bazel.yml
+++ b/.github/workflows/_bazel.yml
@@ -117,14 +117,14 @@ jobs:
             # Strip comment in front of WORKERS_MIRROR_URL, then substitute secret to use it.
             sed -e '/WORKERS_MIRROR_URL/ { s@# *@@; s@WORKERS_MIRROR_URL@${{ secrets.WORKERS_MIRROR_URL }}@; }' -i.bak build/deps/nodejs.MODULE.bazel
           fi
-      - name: Bazel build (Windows workaround)
+      - name: Bazel build (windows exp nocache)
         if: runner.os == 'Windows'
-        # HACK: Work around Bazel Windows bug: Some targets need to be compiled without symlink
-        # support. Since we still need symlinks to compile C++ code properly, compile these targets
-        # separately.
+        # EXP: Check if Windows can now build without workaround
         run: |
-          bazel --nowindows_enable_symlinks build ${{ inputs.extra_bazel_args }} --config=ci --profile build-win-workaround.bazel-profile.gz --remote_cache=https://bazel:${{ secrets.BAZEL_CACHE_KEY }}@bazel-remote-cache.devprod.cloudflare.dev //src/wpt:wpt-all@tsproject //src/node:node@tsproject //src/pyodide:pyodide_static@tsproject
+          bazel build --config=ci ${{ inputs.extra_bazel_args }} //...
+          bazel test --config=ci ${{ inputs.extra_bazel_args }} ${{ inputs.test_target }}
       - name: Bazel build
+        if: runner.os != 'Windows'
         run: |
           bazel build --remote_cache=https://bazel:${{ secrets.BAZEL_CACHE_KEY }}@bazel-remote-cache.devprod.cloudflare.dev  --config=ci ${{ inputs.extra_bazel_args }} //...
       - name: Build and load container images
