--- a/src/workerd/api/tests/BUILD.bazel
+++ b/src/workerd/api/tests/BUILD.bazel
@@ -121,7 +121,7 @@ wd_test(
 )
 
 wd_test(
-    size = "large",
+    size = "enormous",
     src = "sql-test.wd-test",
     args = ["--experimental"],
     data = [
@@ -129,8 +129,6 @@ wd_test(
         "sql-test.js",
         "sql-test-tail.js",
     ],
-    # Exceeds 240s timeout under coverage instrumentation
-    tags = ["no-coverage"],
 )
 
 wd_test(
