--- a/.bazelrc
+++ b/.bazelrc
@@ -421,16 +421,17 @@ build:coverage --test_env=BAZEL_USE_LLVM_NATIVE_COVERAGE=1
 # GCOV is used by rules_cc to merge raw profile data (.profraw) into indexed profile data (.profdata)
 build:coverage --action_env=GCOV=llvm-profdata
 build:coverage --test_env=GCOV=llvm-profdata
-# COVERAGE_GCOV_PATH is passed through from the environment. Users must set this to the absolute path
-# of llvm-profdata (used by collect_cc_coverage.sh for merging .profraw files).
-# Example: export COVERAGE_GCOV_PATH=$(which llvm-profdata)
-build:coverage --action_env=COVERAGE_GCOV_PATH
-build:coverage --test_env=COVERAGE_GCOV_PATH
+# COVERAGE_GCOV_PATH is used by collect_cc_coverage.sh for merging .profraw files.
+build:coverage --action_env=COVERAGE_GCOV_PATH=/usr/bin/llvm-profdata
+build:coverage --test_env=COVERAGE_GCOV_PATH=/usr/bin/llvm-profdata
 # BAZEL_LLVM_COV is used by rules_cc to generate coverage reports from profile data
 build:coverage --action_env=BAZEL_LLVM_COV=llvm-cov
 build:coverage --test_env=BAZEL_LLVM_COV=llvm-cov
 # LLVM_COV is used by collect_cc_coverage.sh for generating LCOV output
 build:coverage --test_env=LLVM_COV=llvm-cov
+# GENERATE_LLVM_LCOV=1 tells collect_cc_coverage.sh to use llvm-cov export to generate LCOV format
+# instead of just outputting raw profdata. LLVM_COV specifies the llvm-cov binary to use.
+build:coverage --test_env=GENERATE_LLVM_LCOV=1
 build:coverage --experimental_use_llvm_covmap
 build:coverage --experimental_generate_llvm_lcov
 # Ensure that we fetch coverage data from remote cache
