--- a/.bazelrc
+++ b/.bazelrc
@@ -68,9 +68,15 @@ build:v8-codegen-opt --per_file_copt=external/abseil-cpp@-O2
 # zlib and tcmalloc (for Linux) are also CPU-intensive, optimize them too.
 build:v8-codegen-opt --per_file_copt=external/tcmalloc@-O2
 build:v8-codegen-opt --per_file_copt=external/zlib@-O2
+# BoringSSL is CPU-intensive for crypto tests, optimize it too.
+build:v8-codegen-opt --per_file_copt=external/boringssl@-O2
+# simdutf is used for fast string encoding/decoding
+build:v8-codegen-opt --per_file_copt=external/+http+simdutf@-O2
 build:v8-codegen-opt-windows --per_file_copt=v8/src@/O2
 build:v8-codegen-opt-windows --per_file_copt=external/abseil-cpp@/O2
 build:v8-codegen-opt-windows --per_file_copt=external/zlib@/O2
+build:v8-codegen-opt-windows --per_file_copt=external/boringssl@/O2
+build:v8-codegen-opt-windows --per_file_copt=external/+http+simdutf@/O2
 
 # In Google projects, exceptions are not used as a rule. Disabling them is more consistent with the
 # canonical V8 build and improves code size. Paths are adjusted for bzlmod mangling – V8 and ICU use
@@ -415,29 +421,59 @@ build:coverage --test_env=BAZEL_USE_LLVM_NATIVE_COVERAGE=1
 # GCOV is used by rules_cc to merge raw profile data (.profraw) into indexed profile data (.profdata)
 build:coverage --action_env=GCOV=llvm-profdata
 build:coverage --test_env=GCOV=llvm-profdata
+# COVERAGE_GCOV_PATH is used by collect_cc_coverage.sh for merging .profraw files.
+build:coverage --action_env=COVERAGE_GCOV_PATH=/usr/bin/llvm-profdata
+build:coverage --test_env=COVERAGE_GCOV_PATH=/usr/bin/llvm-profdata
 # BAZEL_LLVM_COV is used by rules_cc to generate coverage reports from profile data
 build:coverage --action_env=BAZEL_LLVM_COV=llvm-cov
 build:coverage --test_env=BAZEL_LLVM_COV=llvm-cov
-# Enable optimizations to reduce coverage overhead while maintaining good coverage quality
-build:coverage --copt=-O2
-build:coverage --copt=-DNDEBUG
-build:coverage --combined_report=lcov
+# LLVM_COV is used by collect_cc_coverage.sh for generating LCOV output
+build:coverage --test_env=LLVM_COV=llvm-cov
+# GENERATE_LLVM_LCOV=1 tells collect_cc_coverage.sh to use llvm-cov export to generate LCOV format
+# instead of just outputting raw profdata. LLVM_COV specifies the llvm-cov binary to use.
+build:coverage --test_env=GENERATE_LLVM_LCOV=1
 build:coverage --experimental_use_llvm_covmap
 build:coverage --experimental_generate_llvm_lcov
+# Ensure that we fetch coverage data from remote cache
 build:coverage --experimental_fetch_all_coverage_outputs
+build:coverage --experimental_split_coverage_postprocessing
+# Allow coverage outputs to be writable for post-processing
+build:coverage --experimental_writable_outputs
 build:coverage --collect_code_coverage
-build:coverage --instrumentation_filter="^//,-//external"
+# Only instrument source code, not tests or tools - significantly speeds up coverage builds
+build:coverage --instrumentation_filter="^//src/workerd[/:],^//src/rust[/:]"
 build:coverage --instrument_test_targets
+# Disable coverage instrumentation for external dependencies to speed up compilation.
+# Coverage for V8/external code is not useful for our purposes.
+# These flags negate -fprofile-instr-generate and -fcoverage-mapping set by rules_cc.
+build:coverage --per_file_copt=external/.*@-fno-profile-instr-generate,-fno-coverage-mapping
 # KJ uses _exit() by default which bypasses atexit handlers and prevents LLVM profile runtime
 # from writing coverage data. KJ_CLEAN_SHUTDOWN forces use of normal exit() instead.
 build:coverage --test_env=KJ_CLEAN_SHUTDOWN=1
+# Use -O1 for faster compilation - coverage builds don't need heavy optimization
+build:coverage --copt=-O1
+# External dependencies can use -O2 since they're not instrumented anyway
+build:coverage --config=v8-codegen-opt
+# Run coverage-related actions locally with sandboxing - remote execution doesn't support LLVM coverage well
+build:coverage --strategy=TestRunner=worker,sandboxed,local
+build:coverage --strategy=CoverageReport=worker,sandboxed,local
+build:coverage --strategy=CoveragePostprocessing=worker,sandboxed,local
+# Reduce debug info for faster compilation and smaller binaries
+build:coverage --copt=-g1
+# Use limited coverage mode for smaller binaries and faster execution (used by Chromium)
+build:coverage --copt=-mllvm
+build:coverage --copt=-limited-coverage-experimental=true
 coverage --test_tag_filters=-off-by-default,-requires-fuzzilli,-requires-container-engine,-lint,-benchmark,-workerd-benchmark,-no-coverage
+# Let tests know they're running in CI (normally set by ci-test but we can't use that config
+# due to --remote_download_minimal which prevents coverage data from being fetched)
+coverage --test_env=CI=true
+coverage --config=wpt-test
 # Coverage instrumentation slows down test execution, so extend timeouts
 # We disable enormous tests due to the slowdown (CI jobs have a 6h max duration)
 coverage --test_size_filters=-enormous
-coverage --test_timeout=60,240,240,240
+coverage --test_timeout=240,240,240,240
 coverage --build_tests_only
-coverage --config=coverage
+coverage --combined_report=lcov
 
 # This config is defined internally and enabled on many machines.
 # Defining it as empty just so these machines can run build commands from the workerd repo
