--- a/deps/rust/crates/BUILD.proc-macro2-1.0.106.bazel
+++ b/deps/rust/crates/BUILD.proc-macro2-1.0.106.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "quote",
+    name = "proc_macro2",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -32,6 +32,7 @@ rust_library(
     crate_features = [
         "default",
         "proc-macro",
+        "span-locations",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
@@ -40,15 +41,15 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=quote",
+        "crate-name=proc-macro2",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.43",
+    version = "1.0.106",
     deps = [
-        "@crates_vendor__proc-macro2-1.0.105//:proc_macro2",
-        "@crates_vendor__quote-1.0.43//:build_script_build",
+        "@crates_vendor__proc-macro2-1.0.106//:build_script_build",
+        "@crates_vendor__unicode-ident-1.0.22//:unicode_ident",
     ],
 )
 
@@ -74,6 +75,7 @@ cargo_build_script(
     crate_features = [
         "default",
         "proc-macro",
+        "span-locations",
     ],
     crate_name = "build_script_build",
     crate_root = "build.rs",
@@ -90,18 +92,18 @@ cargo_build_script(
         ],
     ),
     edition = "2021",
-    pkg_name = "quote",
+    pkg_name = "proc-macro2",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=quote",
+        "crate-name=proc-macro2",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.43",
+    version = "1.0.106",
     visibility = ["//visibility:private"],
 )
 
