--- a/deps/rust/crates/BUILD.zmij-1.0.16.bazel
+++ b/deps/rust/crates/BUILD.zmij-1.0.16.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "proc_macro2",
+    name = "zmij",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,11 +29,6 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "default",
-        "proc-macro",
-        "span-locations",
-    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -41,15 +36,14 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=proc-macro2",
+        "crate-name=zmij",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.105",
+    version = "1.0.16",
     deps = [
-        "@crates_vendor__proc-macro2-1.0.105//:build_script_build",
-        "@crates_vendor__unicode-ident-1.0.22//:unicode_ident",
+        "@crates_vendor__zmij-1.0.16//:build_script_build",
     ],
 )
 
@@ -72,11 +66,6 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "default",
-        "proc-macro",
-        "span-locations",
-    ],
     crate_name = "build_script_build",
     crate_root = "build.rs",
     data = glob(
@@ -92,18 +81,18 @@ cargo_build_script(
         ],
     ),
     edition = "2021",
-    pkg_name = "proc-macro2",
+    pkg_name = "zmij",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=proc-macro2",
+        "crate-name=zmij",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.105",
+    version = "1.0.16",
     visibility = ["//visibility:private"],
 )
 
