--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -80,6 +80,29 @@ platform(
     ],
 )
 
+# Detect whether we use Linux/macOS/either, used to configure whether tcmalloc/perfetto should be
+# used.
+config_setting(
+    name = "is_linux",
+    constraint_values = ["@platforms//os:linux"],
+    visibility = ["//visibility:public"],
+)
+
+config_setting(
+    name = "is_macos",
+    constraint_values = ["@platforms//os:macos"],
+    visibility = ["//visibility:public"],
+)
+
+selects.config_setting_group(
+    name = "is_unix",
+    match_any = [
+        ":is_linux",
+        ":is_macos",
+    ],
+    visibility = ["//visibility:public"],
+)
+
 # bazel enables the --ffunction-sections, --gc-sections flags used to remove dead code by default
 # on Linux opt builds. Enable the equivalent macOS flag -Wl,-dead_strip here to work around bazel
 # idiosyncrasies.
