Allow empty protocols array in WebSocket constructor
Fixes #5822

--- a/src/workerd/api/tests/BUILD.bazel
+++ b/src/workerd/api/tests/BUILD.bazel
@@ -439,6 +439,12 @@ wd_test(
 )
 
 wd_test(
+    src = "websocket-constructor-test.wd-test",
+    args = ["--experimental"],
+    data = ["websocket-constructor-test.js"],
+)
+
+wd_test(
     src = "websocket-hibernation.wd-test",
     args = ["--experimental"],
     data = ["websocket-hibernation.js"],
