Allow crypto.getRandomValues() and crypto.randomUUID() at top level
Fixes #5754

--- a/src/workerd/api/tests/BUILD.bazel
+++ b/src/workerd/api/tests/BUILD.bazel
@@ -214,6 +214,12 @@ wd_test(
 )
 
 wd_test(
+    src = "crypto-toplevel-test.wd-test",
+    args = ["--experimental"],
+    data = ["crypto-toplevel-test.js"],
+)
+
+wd_test(
     src = "data-url-fetch-test.wd-test",
     args = ["--experimental"],
     data = ["data-url-fetch-test.js"],
