--- a/src/workerd/api/tests/BUILD.bazel
+++ b/src/workerd/api/tests/BUILD.bazel
@@ -17,6 +17,7 @@ wd_test(
     src = "tcp-ingress-test.wd-test",
     args = ["--experimental"],
     data = ["tcp-ingress-test.js"],
+    tags = ["requires-network"],
 )
 
 wd_test(
