--- a/src/wpt/BUILD.bazel
+++ b/src/wpt/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//:build/eslint_test.bzl", "eslint_test")
+load("//:build/lint_test.bzl", "lint_test")
 load("//:build/wd_ts_project.bzl", "wd_ts_project")
 load("//:build/wpt_test.bzl", "wpt_test")
 
