--- a/codecov.yml
+++ b/codecov.yml
@@ -11,5 +11,5 @@ coverage:
   range: "70...100"
 
 comment:
-  # Require any change in coverage to post
-  require_changes: true
+  # Only post if coverage drops
+  require_changes: "coverage_drop"
