--- a/.npmrc
+++ b/.npmrc
@@ -6,4 +6,5 @@ manage-package-manager-versions = true
 # Disabling pnpm [hoisting](https://pnpm.io/npmrc#hoist) by setting `hoist=false` is recommended on
 # projects using rules_js so that pnpm outside of Bazel lays out a node_modules tree similar to what
 # rules_js lays out under Bazel (without a hidden node_modules/.pnpm/node_modules)
+# Test
 hoist=false
