Add ZSTD bindings to the node:zlib package.

--- a/src/workerd/api/node/tests/BUILD.bazel
+++ b/src/workerd/api/node/tests/BUILD.bazel
@@ -217,6 +217,13 @@ wd_test(
 )
 
 wd_test(
+    size = "large",
+    src = "zlib-zstd-nodejs-test.wd-test",
+    args = ["--experimental"],
+    data = ["zlib-zstd-nodejs-test.js"],
+)
+
+wd_test(
     src = "module-nodejs-test.wd-test",
     args = ["--experimental"],
     data = ["module-nodejs-test.js"],
